# BaseGraphMetrics

./: CMakeLists.txt  README.md  bind_metrics.cpp  directed.cpp  general.cpp  general.h  undirected.cpp  undirected.h
.github/workflows/: compare_networkx.yml  cpp_unit_tests.yml
include/BaseGraph/extensions/metrics/: directed.h  general.h  undirected.h
python/: CMakeLists.txt  pybind.cpp
src/: CMakeLists.txt  directed.cpp  general.cpp  undirected.cpp
test_metrics/: test_directed.cpp
tests/: CMakeLists.txt  fixtures.hpp  test_undirected.cpp
tests/test_with_networkx/: fixtures.py  test_undirected_metrics.py
