if (DEFINED ENV{GITHUB_ACTIONS})
    if (WIN32)
        set(CMAKE_BUILD_TYPE Release)
        link_directories("D:/gtest/lib")
        include_directories("D:/gtest/include")

        set(CMAKE_CXX_FLAGS_RELEASE "/MT")
    elseif (APPLE)
        link_directories("/usr/local/lib")
        include_directories("/usr/local/include")
    endif ()
else ()
    find_package(GTest REQUIRED)
endif ()

set(TEST_FILES_NAMES test_directed test_undirected)

foreach(TEST_NAME ${TEST_FILES_NAMES})
    add_executable(${TEST_NAME} ${TEST_NAME}.cpp)
    target_include_directories(${TEST_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
    target_link_libraries(${TEST_NAME} ${EXTENSION_NAME} BaseGraph::core gtest gtest_main)
    add_test(${TEST_NAME} ${TEST_NAME})
endforeach()
